--- a/Source/Satis.ModelViewer/Satis.ModelViewer.csproj
+++ b/Source/Satis.ModelViewer/Satis.ModelViewer.csproj
@@ -11,7 +11,8 @@
     <RootNamespace>Satis.ModelViewer</RootNamespace>
     <AssemblyName>Satis.ModelViewer</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
-    <TargetFrameworkProfile>Client</TargetFrameworkProfile>
+    <TargetFrameworkProfile>
+    </TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WarningLevel>4</WarningLevel>
@@ -35,13 +36,48 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|AnyCPU'">
+    <DebugSymbols>true</DebugSymbols>
+    <OutputPath>bin\Debug\</OutputPath>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DebugType>full</DebugType>
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <CodeAnalysisLogFile>bin\Debug\Satis.ModelViewer.exe.CodeAnalysisLog.xml</CodeAnalysisLogFile>
+    <CodeAnalysisUseTypeNameInSuppression>true</CodeAnalysisUseTypeNameInSuppression>
+    <CodeAnalysisModuleSuppressionsFile>GlobalSuppressions.cs</CodeAnalysisModuleSuppressionsFile>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+    <CodeAnalysisRuleSetDirectories>;C:\Program Files (x86)\Microsoft Visual Studio 10.0\Team Tools\Static Analysis Tools\\Rule Sets</CodeAnalysisRuleSetDirectories>
+    <CodeAnalysisIgnoreBuiltInRuleSets>true</CodeAnalysisIgnoreBuiltInRuleSets>
+    <CodeAnalysisRuleDirectories>;C:\Program Files (x86)\Microsoft Visual Studio 10.0\Team Tools\Static Analysis Tools\FxCop\\Rules</CodeAnalysisRuleDirectories>
+    <CodeAnalysisIgnoreBuiltInRules>true</CodeAnalysisIgnoreBuiltInRules>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|AnyCPU'">
+    <OutputPath>bin\Release\</OutputPath>
+    <DefineConstants>TRACE</DefineConstants>
+    <Optimize>true</Optimize>
+    <DebugType>pdbonly</DebugType>
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <CodeAnalysisLogFile>bin\Release\Satis.ModelViewer.exe.CodeAnalysisLog.xml</CodeAnalysisLogFile>
+    <CodeAnalysisUseTypeNameInSuppression>true</CodeAnalysisUseTypeNameInSuppression>
+    <CodeAnalysisModuleSuppressionsFile>GlobalSuppressions.cs</CodeAnalysisModuleSuppressionsFile>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+    <CodeAnalysisRuleSetDirectories>;C:\Program Files (x86)\Microsoft Visual Studio 10.0\Team Tools\Static Analysis Tools\\Rule Sets</CodeAnalysisRuleSetDirectories>
+    <CodeAnalysisIgnoreBuiltInRuleSets>true</CodeAnalysisIgnoreBuiltInRuleSets>
+    <CodeAnalysisRuleDirectories>;C:\Program Files (x86)\Microsoft Visual Studio 10.0\Team Tools\Static Analysis Tools\FxCop\\Rules</CodeAnalysisRuleDirectories>
+    <CodeAnalysisIgnoreBuiltInRules>true</CodeAnalysisIgnoreBuiltInRules>
+    <CodeAnalysisFailOnMissingRules>false</CodeAnalysisFailOnMissingRules>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="AvalonDock.Themes">
       <HintPath>..\..\..\Gemini\Libraries\AvalonDock\AvalonDock.Themes.dll</HintPath>
     </Reference>
-    <Reference Include="SlimDX, Version=2.0.9.42, Culture=neutral, PublicKeyToken=b1b0c32fd1ffe4f9, processorArchitecture=AMD64">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\Gemini\Libraries\SlimDX\x86\SlimDX.dll</HintPath>
+    <Reference Include="Caliburn.Core, Version=1.1.0.49753, Culture=neutral, PublicKeyToken=8e5891231f2ed21f, processorArchitecture=MSIL" />
+    <Reference Include="Caliburn.PresentationFramework, Version=1.1.0.49753, Culture=neutral, PublicKeyToken=8e5891231f2ed21f, processorArchitecture=MSIL" />
+    <Reference Include="Microsoft.Practices.ServiceLocation, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
+    <Reference Include="SlimDX">
+      <HintPath>..\..\Libraries\SlimDX\x86\SlimDX.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.Composition" />
@@ -58,6 +94,9 @@
     <Reference Include="WindowsBase" />
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
+    <Reference Include="WPG">
+      <HintPath>..\..\Libraries\WPG\WPG.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
@@ -68,27 +107,17 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="SatisContractNames.cs" />
-    <Compile Include="Services\Direct3D\ArcBallCameraController.cs" />
-    <Compile Include="Services\Direct3D\GraphicsDeviceService.cs" />
-    <Compile Include="Services\Direct3D\IGraphicsDeviceService.cs" />
-    <Compile Include="Services\Direct3D\Model.cs" />
-    <Compile Include="Services\Direct3D\ModelMesh.cs" />
-    <Compile Include="Services\Direct3D\RenderCommandParameters.cs" />
-    <Compile Include="Services\Direct3D\Renderer.cs" />
-    <Compile Include="Services\Direct3D\RenderWindow.cs" />
-    <Compile Include="Services\Direct3D\VertexPositionNormalTexture.cs" />
-    <Compile Include="Services\ImportLogger.cs" />
-    <Compile Include="Workbench\Documents\D3DImagePanel.xaml.cs">
-      <DependentUpon>D3DImagePanel.xaml</DependentUpon>
+    <Compile Include="Modules\ModelEditor\EditorProvider.cs" />
+    <Compile Include="Modules\ModelEditor\Module.cs" />
+    <Compile Include="Modules\ModelEditor\Views\ModelEditorView.xaml.cs">
+      <DependentUpon>ModelEditorView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Workbench\Documents\ModelDocument.cs" />
-    <Compile Include="Workbench\Documents\ModelDocumentView.xaml.cs">
-      <DependentUpon>ModelDocumentView.xaml</DependentUpon>
-    </Compile>
+    <Compile Include="Modules\Startup\Module.cs" />
+    <Compile Include="Modules\Output\ImportLogger.cs" />
+    <Compile Include="Modules\ModelEditor\ViewModels\ModelEditorViewModel.cs" />
+    <Compile Include="Modules\ModelEditor\Views\Trackball.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Application\StartupCommands\StartupCommand.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -114,11 +143,12 @@
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
     <AppDesigner Include="Properties\" />
-    <Content Include="Services\Direct3D\Effect.fx">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\..\Gemini\Source\Gemini.Framework\Gemini.Framework.csproj">
+      <Project>{5346F231-05DB-45CE-ADD4-F13D25DF9235}</Project>
+      <Name>Gemini.Framework</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\..\Gemini\Source\Gemini\Gemini.csproj">
       <Project>{821329B7-E567-4E8C-B8C0-7212A0AE7FE4}</Project>
       <Name>Gemini %28Gemini\Gemini%29</Name>
@@ -127,21 +157,22 @@
       <Project>{0E5E31FF-D903-40BD-A787-7DA4E1D30138}</Project>
       <Name>Nexus %28Nexus\Nexus%29</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Satis.ModelViewer.Framework\Satis.ModelViewer.Framework.csproj">
+      <Project>{FE9B4C88-2E7D-445A-9681-DF5A3D06954D}</Project>
+      <Name>Satis.ModelViewer.Framework</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Satis\Satis.csproj">
       <Project>{CEBA7681-E968-46F6-8C87-7005FAA98267}</Project>
       <Name>Satis</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Page Include="Workbench\Documents\D3DImagePanel.xaml">
+    <Page Include="Modules\ModelEditor\Views\ModelEditorView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Workbench\Documents\ModelDocumentView.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
     </Page>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
