--- a/src/Meshellator.Viewer.Framework/Meshellator.Viewer.Framework.csproj
+++ b/src/Meshellator.Viewer.Framework/Meshellator.Viewer.Framework.csproj
@@ -65,16 +65,20 @@
     <CodeAnalysisFailOnMissingRules>false</CodeAnalysisFailOnMissingRules>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Caliburn.Core, Version=1.1.0.49753, Culture=neutral, PublicKeyToken=8e5891231f2ed21f, processorArchitecture=MSIL" />
-    <Reference Include="Caliburn.PresentationFramework, Version=1.1.0.49753, Culture=neutral, PublicKeyToken=8e5891231f2ed21f, processorArchitecture=MSIL" />
-    <Reference Include="Gemini.Framework, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\lib\Gemini.Framework.dll</HintPath>
+    <Reference Include="Caliburn.Core">
+      <HintPath>..\..\lib\Caliburn\Caliburn.Core.dll</HintPath>
     </Reference>
-    <Reference Include="Microsoft.Practices.ServiceLocation, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
-    <Reference Include="Nexus, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\lib\Nexus.dll</HintPath>
+    <Reference Include="Caliburn.PresentationFramework">
+      <HintPath>..\..\lib\Caliburn\Caliburn.PresentationFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="Gemini.Framework">
+      <HintPath>..\..\lib\Gemini\Gemini.Framework.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Practices.ServiceLocation">
+      <HintPath>..\..\lib\Caliburn\Microsoft.Practices.ServiceLocation.dll</HintPath>
+    </Reference>
+    <Reference Include="Nexus">
+      <HintPath>..\..\lib\Nexus\Nexus.dll</HintPath>
     </Reference>
     <Reference Include="SlimDX">
       <HintPath>..\..\Libraries\SlimDX\x86\SlimDX.dll</HintPath>
