--- a/src/Meshellator/Meshellator.csproj
+++ b/src/Meshellator/Meshellator.csproj
@@ -59,10 +59,6 @@
     <CodeAnalysisRuleDirectories>;C:\Program Files (x86)\Microsoft Visual Studio 10.0\Team Tools\Static Analysis Tools\FxCop\\Rules</CodeAnalysisRuleDirectories>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Nexus, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\lib\Nexus\Nexus.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Core" />
@@ -153,6 +149,7 @@
     <Compile Include="ILogger.cs" />
     <Compile Include="Material.cs" />
     <Compile Include="Mesh.cs" />
+    <Compile Include="MeshUtility.cs" />
     <Compile Include="Primitives\BezierPatch.cs" />
     <Compile Include="Primitives\BezierPrimitiveTessellator.cs" />
     <Compile Include="Primitives\BasicPrimitiveTessellator.cs" />
@@ -165,11 +162,16 @@
     <Compile Include="Primitives\TeapotTessellator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Scene.cs" />
-    <Compile Include="Util\MeshUtility.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Importers\Autodesk3ds\Licence.txt" />
     <Content Include="Importers\LightwaveObj\Licence.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\nexus\src\Nexus\Nexus.csproj">
+      <Project>{0E5E31FF-D903-40BD-A787-7DA4E1D30138}</Project>
+      <Name>Nexus</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
