--- a/lib/NUnit/nunit-console.exe.config
+++ b/lib/NUnit/nunit-console.exe.config
@@ -8,6 +8,10 @@
 	  </switches>
 	</system.diagnostics>
 
+	<startup>
+		<supportedRuntime version="v4.0"/>
+	</startup>
+
   <runtime>
     <!-- We need this so test exceptions don't crash NUnit -->
     <legacyUnhandledExceptionPolicy enabled="1" />
