--- a/src/Meshellator.Tests/Meshellator.Tests.csproj
+++ b/src/Meshellator.Tests/Meshellator.Tests.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Importers\LightwaveObj\Objects\Parsers\FaceParserTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Importers\Autodesk3ds\Autodesk3dsTest.cs" />
     <Compile Include="MeshUtilityTests.cs" />
