--- a/src/Meshellator/Meshellator.csproj
+++ b/src/Meshellator/Meshellator.csproj
@@ -51,62 +51,62 @@
     <Compile Include="Generators\NormalLinesGenerator.cs" />
     <Compile Include="IAssetImporter.cs" />
     <Compile Include="IAssetImporterMetadata.cs" />
-    <Compile Include="Importers\Autodesk3ds\Autodesk3dsImporter.cs" />
-    <Compile Include="Importers\Autodesk3ds\Camera3ds.cs" />
-    <Compile Include="Importers\Autodesk3ds\Color3ds.cs" />
-    <Compile Include="Importers\Autodesk3ds\Decode3ds.cs" />
-    <Compile Include="Importers\Autodesk3ds\Exception3ds.cs" />
-    <Compile Include="Importers\Autodesk3ds\Face3ds.cs" />
-    <Compile Include="Importers\Autodesk3ds\FaceMat3ds.cs" />
-    <Compile Include="Importers\Autodesk3ds\HideKey3ds.cs" />
-    <Compile Include="Importers\Autodesk3ds\HideTrack3ds.cs" />
-    <Compile Include="Importers\Autodesk3ds\Light3ds.cs" />
-    <Compile Include="Importers\Autodesk3ds\Material3ds.cs" />
-    <Compile Include="Importers\Autodesk3ds\Mesh3ds.cs" />
-    <Compile Include="Importers\Autodesk3ds\MorphKey3ds.cs" />
-    <Compile Include="Importers\Autodesk3ds\MorphTrack3ds.cs" />
-    <Compile Include="Importers\Autodesk3ds\PKey3ds.cs" />
-    <Compile Include="Importers\Autodesk3ds\PTrack3ds.cs" />
-    <Compile Include="Importers\Autodesk3ds\RotationKey3ds.cs" />
-    <Compile Include="Importers\Autodesk3ds\RotationTrack3ds.cs" />
-    <Compile Include="Importers\Autodesk3ds\Scene3ds.cs" />
-    <Compile Include="Importers\Autodesk3ds\SplineKey3ds.cs" />
-    <Compile Include="Importers\Autodesk3ds\TexCoords3ds.cs" />
-    <Compile Include="Importers\Autodesk3ds\TextDecode3ds.cs" />
-    <Compile Include="Importers\Autodesk3ds\TextureMappingMode3ds.cs" />
-    <Compile Include="Importers\Autodesk3ds\Track3ds.cs" />
-    <Compile Include="Importers\Autodesk3ds\Utils3ds.cs" />
-    <Compile Include="Importers\Autodesk3ds\Vertex3ds.cs" />
-    <Compile Include="Importers\Autodesk3ds\XYZKey3ds.cs" />
-    <Compile Include="Importers\Autodesk3ds\XYZTrack3ds.cs" />
-    <Compile Include="Importers\LightwaveObj\LightwaveObjImporter.cs" />
-    <Compile Include="Importers\LightwaveObj\Objects\Face.cs" />
-    <Compile Include="Importers\LightwaveObj\Objects\FaceType.cs" />
-    <Compile Include="Importers\LightwaveObj\Objects\Group.cs" />
-    <Compile Include="Importers\LightwaveObj\Objects\Material.cs" />
-    <Compile Include="Importers\LightwaveObj\Objects\Parsers\CommentParser.cs" />
-    <Compile Include="Importers\LightwaveObj\Objects\Parsers\DefaultParser.cs" />
-    <Compile Include="Importers\LightwaveObj\Objects\Parsers\LineParser.cs" />
-    <Compile Include="Importers\LightwaveObj\Objects\Parsers\LineParserFactory.cs" />
-    <Compile Include="Importers\LightwaveObj\Objects\Parsers\Mtl\KaParser.cs" />
-    <Compile Include="Importers\LightwaveObj\Objects\Parsers\Mtl\KdMapParser.cs" />
-    <Compile Include="Importers\LightwaveObj\Objects\Parsers\Mtl\KdParser.cs" />
-    <Compile Include="Importers\LightwaveObj\Objects\Parsers\Mtl\KsParser.cs" />
-    <Compile Include="Importers\LightwaveObj\Objects\Parsers\Mtl\MaterialFileParser.cs" />
-    <Compile Include="Importers\LightwaveObj\Objects\Parsers\Mtl\MaterialParser.cs" />
-    <Compile Include="Importers\LightwaveObj\Objects\Parsers\Mtl\MtlLineParserFactory.cs" />
-    <Compile Include="Importers\LightwaveObj\Objects\Parsers\Mtl\NsParser.cs" />
-    <Compile Include="Importers\LightwaveObj\Objects\Parsers\NormalParser.cs" />
-    <Compile Include="Importers\LightwaveObj\Objects\Parsers\Obj\FaceParser.cs" />
-    <Compile Include="Importers\LightwaveObj\Objects\Parsers\Obj\FreeFormParser.cs" />
-    <Compile Include="Importers\LightwaveObj\Objects\Parsers\Obj\GroupParser.cs" />
-    <Compile Include="Importers\LightwaveObj\Objects\Parsers\Obj\MaterialParser.cs" />
-    <Compile Include="Importers\LightwaveObj\Objects\Parsers\Obj\ObjLineParserFactory.cs" />
-    <Compile Include="Importers\LightwaveObj\Objects\Parsers\Obj\TextureCoordinateParser.cs" />
-    <Compile Include="Importers\LightwaveObj\Objects\Parsers\Obj\VertexParser.cs" />
-    <Compile Include="Importers\LightwaveObj\Objects\TextureCoordinate.cs" />
-    <Compile Include="Importers\LightwaveObj\Objects\Vertex.cs" />
-    <Compile Include="Importers\LightwaveObj\Objects\WavefrontObject.cs" />
+    <Compile Include="Importers\3ds\Autodesk3dsImporter.cs" />
+    <Compile Include="Importers\3ds\Camera3ds.cs" />
+    <Compile Include="Importers\3ds\Color3ds.cs" />
+    <Compile Include="Importers\3ds\Decode3ds.cs" />
+    <Compile Include="Importers\3ds\Exception3ds.cs" />
+    <Compile Include="Importers\3ds\Face3ds.cs" />
+    <Compile Include="Importers\3ds\FaceMat3ds.cs" />
+    <Compile Include="Importers\3ds\HideKey3ds.cs" />
+    <Compile Include="Importers\3ds\HideTrack3ds.cs" />
+    <Compile Include="Importers\3ds\Light3ds.cs" />
+    <Compile Include="Importers\3ds\Material3ds.cs" />
+    <Compile Include="Importers\3ds\Mesh3ds.cs" />
+    <Compile Include="Importers\3ds\MorphKey3ds.cs" />
+    <Compile Include="Importers\3ds\MorphTrack3ds.cs" />
+    <Compile Include="Importers\3ds\PKey3ds.cs" />
+    <Compile Include="Importers\3ds\PTrack3ds.cs" />
+    <Compile Include="Importers\3ds\RotationKey3ds.cs" />
+    <Compile Include="Importers\3ds\RotationTrack3ds.cs" />
+    <Compile Include="Importers\3ds\Scene3ds.cs" />
+    <Compile Include="Importers\3ds\SplineKey3ds.cs" />
+    <Compile Include="Importers\3ds\TexCoords3ds.cs" />
+    <Compile Include="Importers\3ds\TextDecode3ds.cs" />
+    <Compile Include="Importers\3ds\TextureMappingMode3ds.cs" />
+    <Compile Include="Importers\3ds\Track3ds.cs" />
+    <Compile Include="Importers\3ds\Utils3ds.cs" />
+    <Compile Include="Importers\3ds\Vertex3ds.cs" />
+    <Compile Include="Importers\3ds\XYZKey3ds.cs" />
+    <Compile Include="Importers\3ds\XYZTrack3ds.cs" />
+    <Compile Include="Importers\Obj\ObjImporter.cs" />
+    <Compile Include="Importers\Obj\Objects\Face.cs" />
+    <Compile Include="Importers\Obj\Objects\FaceType.cs" />
+    <Compile Include="Importers\Obj\Objects\Group.cs" />
+    <Compile Include="Importers\Obj\Objects\Material.cs" />
+    <Compile Include="Importers\Obj\Objects\Parsers\CommentParser.cs" />
+    <Compile Include="Importers\Obj\Objects\Parsers\DefaultParser.cs" />
+    <Compile Include="Importers\Obj\Objects\Parsers\LineParser.cs" />
+    <Compile Include="Importers\Obj\Objects\Parsers\LineParserFactory.cs" />
+    <Compile Include="Importers\Obj\Objects\Parsers\Mtl\KaParser.cs" />
+    <Compile Include="Importers\Obj\Objects\Parsers\Mtl\KdMapParser.cs" />
+    <Compile Include="Importers\Obj\Objects\Parsers\Mtl\KdParser.cs" />
+    <Compile Include="Importers\Obj\Objects\Parsers\Mtl\KsParser.cs" />
+    <Compile Include="Importers\Obj\Objects\Parsers\Mtl\MaterialFileParser.cs" />
+    <Compile Include="Importers\Obj\Objects\Parsers\Mtl\MaterialParser.cs" />
+    <Compile Include="Importers\Obj\Objects\Parsers\Mtl\MtlLineParserFactory.cs" />
+    <Compile Include="Importers\Obj\Objects\Parsers\Mtl\NsParser.cs" />
+    <Compile Include="Importers\Obj\Objects\Parsers\NormalParser.cs" />
+    <Compile Include="Importers\Obj\Objects\Parsers\Obj\FaceParser.cs" />
+    <Compile Include="Importers\Obj\Objects\Parsers\Obj\FreeFormParser.cs" />
+    <Compile Include="Importers\Obj\Objects\Parsers\Obj\GroupParser.cs" />
+    <Compile Include="Importers\Obj\Objects\Parsers\Obj\MaterialParser.cs" />
+    <Compile Include="Importers\Obj\Objects\Parsers\Obj\ObjLineParserFactory.cs" />
+    <Compile Include="Importers\Obj\Objects\Parsers\Obj\TextureCoordinateParser.cs" />
+    <Compile Include="Importers\Obj\Objects\Parsers\Obj\VertexParser.cs" />
+    <Compile Include="Importers\Obj\Objects\TextureCoordinate.cs" />
+    <Compile Include="Importers\Obj\Objects\Vertex.cs" />
+    <Compile Include="Importers\Obj\Objects\WavefrontObject.cs" />
     <Compile Include="Importers\Nff\NffImporter.cs" />
     <Compile Include="Importers\Nff\Parsers\CommentParser.cs" />
     <Compile Include="Importers\Nff\Parsers\TorusParser.cs" />
@@ -142,8 +142,8 @@
     <Compile Include="Scene.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Importers\Autodesk3ds\Licence.txt" />
-    <Content Include="Importers\LightwaveObj\Licence.txt" />
+    <Content Include="Importers\3ds\Licence.txt" />
+    <Content Include="Importers\Obj\Licence.txt" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
