--- a/src/Meshellator.Tests/Meshellator.Tests.csproj
+++ b/src/Meshellator.Tests/Meshellator.Tests.csproj
@@ -48,6 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Importers\Obj\Objects\Parsers\FaceParserTests.cs" />
+    <Compile Include="Importers\Ply\PlyTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Importers\3ds\Autodesk3dsTest.cs" />
     <Compile Include="MeshUtilityTests.cs" />
@@ -65,7 +66,7 @@
     <None Include="Models\Ply\Cube2.ply">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="Models\Ply\Cube1.ply">
+    <None Include="Models\Ply\Bunny.ply">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="packages.config" />
