--- a/src/Meshellator.Tests/packages.config
+++ b/src/Meshellator.Tests/packages.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Nexus" version="1.0.0.0" />
-  <package id="NUnit" version="2.5.10.11092" />
+  <package id="Nexus" version="2.0.0" targetFramework="net40" />
+  <package id="NUnit" version="2.6.0.12054" targetFramework="net40" />
 </packages>
