Fix compilation errors caused by Nexus update

--- a/src/Meshellator.Viewer/Meshellator.Viewer.csproj
+++ b/src/Meshellator.Viewer/Meshellator.Viewer.csproj
@@ -63,8 +63,8 @@
     <Reference Include="Gemini">
       <HintPath>..\..\lib\Gemini\Gemini.dll</HintPath>
     </Reference>
-    <Reference Include="Nexus, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Nexus.1.0.0.0\lib\NET40\Nexus.dll</HintPath>
+    <Reference Include="Nexus">
+      <HintPath>..\packages\Nexus.2.1.0\lib\net40\Nexus.dll</HintPath>
     </Reference>
     <Reference Include="SlimDX, Version=2.0.9.42, Culture=neutral, PublicKeyToken=b1b0c32fd1ffe4f9, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
