--- a/src/Meshellator.Viewer/packages.config
+++ b/src/Meshellator.Viewer/packages.config
@@ -8,4 +8,6 @@
   <package id="Rx-Core" version="2.0.20823" targetFramework="net40" />
   <package id="Rx-Interfaces" version="2.0.20823" targetFramework="net40" />
   <package id="Rx-Linq" version="2.0.20823" targetFramework="net40" />
+  <package id="SharpDX" version="2.3.1" targetFramework="net40" />
+  <package id="SharpDX.Direct3D9" version="2.3.1" targetFramework="net40" />
 </packages>
